# custard

./: .gitignore  Cargo.toml  README.md  go.work
.github/workflows/: rust.yml
crates/http/: Cargo.toml
crates/http/src/route/: collate_strings.rs  frontmatter_file.rs  frontmatter_list.rs  mod.rs
crates/json_http/: Cargo.toml
crates/json_http/src/route/: collate_strings.rs  frontmatter_file.rs  frontmatter_list.rs
crates/lib/: Cargo.toml
crates/lib/src/: collate.rs  frontmatter_file.rs  frontmatter_query.rs  lib.rs  list.rs  markup.rs  single.rs
crates/lib/src/frontmatter_file/: keeper.rs
crates/sock/: Cargo.toml
crates/sock/src/: main.rs
go/client/sock/: client.go  go.mod  go.sum
go/client/sock/test/: client_test.go
src/: collate.rs  frontmatter_file.rs  frontmatter_query.rs  fs.rs  lib.rs  main.rs  single.rs  utf8_filepath.rs
src/frontmatter_file/: keeper.rs  map.rs
src/frontmatter_query/: file_get.rs  file_post.rs  post.rs
src/route/: collate_strings.rs  frontmatter_file.rs  frontmatter_list.rs  mod.rs
tests/files/: blog.md  meme.md
tests/python/: test_file_tracking.py
