[package]
name = "mdbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
notify = "5.2.0"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }
