[package]
name = "custard"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A frontmatter-querying server"
repository = "https://github.com/Teajey/custard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
camino = "1.1.6"
chrono = { version = "0.4.31", features = ["serde"] }
notify = "5.2.0"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
