[package]
name = "custard"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "A frontmatter-querying server"
repository = "https://github.com/Teajey/custard"

[dependencies]
anyhow = "1.0.75"
camino = "1.1.6"
axum = "0.6.20"
custard_lib = { version = "0.1.0", path = "../lib" }
notify = "5.2.0"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
