[package]
name = "custard_lib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A core library for Custard"
repository = "https://github.com/Teajey/custard"

[dependencies]
anyhow = "1.0.75"
camino = "1.1.6"
chrono = { version = "0.4.31", features = ["serde"] }
notify = "5.2.0"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
thiserror = "1.0.49"

[dev-dependencies]
pretty_assertions = "1.4.0"
