[package]
name = "custard-sock"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Unix socket interface for a frontmatter-querying server"
repository = "https://github.com/Teajey/custard"

[dependencies]
anyhow = "1.0.75"
camino = "1.1.6"
custard_lib = { path = "../lib" }
notify = "5.2.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
pretty_assertions = "1.4.0"
